feat: html content

--- a/index.html
+++ b/index.html
@@ -10,7 +10,23 @@
 </head>
 
 <body>
+  <div class="card">
+    <img src="./assets/img/cacerola.png">
+    <p class="product">Cacerola de Fierro Fundido</p>
+    <input id="number" placeholder="Ingresa la cantidad">
+    <input id="color" placeholder="Ingresa color en inglés">
+    <p class="price">Precio: $5.000</p>
+    <button>Calcular Total</button>
+  </div>
 
+  <div class="resume">
+    <p>Total: $<span id="final"></span></p>
+    <p>Cantidad: <span id="amountFinal"></span></p>
+    <div class="colorContainer">
+      <p>Color:</p>
+      <div class="circle"></div>
+    </div>
+  </div>
 <script src="./assets/js/script.js"></script>
 </body>
 
